--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,4 @@
 [package]
-name = "rust-test"
+name = "toy-port-scanner"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-rand = "0.8.5"
-futures = "0.3.21"
